--- a/style/home_style.css
+++ b/style/home_style.css
@@ -14,9 +14,13 @@
 	--about-text-size: 25ch;
 }
 
+html {
+	overflow-x: hidden;
+}
+
 body {
 	/* min-height: 100vh; */
-	display: grid;
+	display: flex;
 	place-items: center;
 	font-family: "Nanum Gothic Coding", sans-serif;
 	font-size: 18px;
@@ -25,7 +29,6 @@ body {
 	/* overflow-x: hidden; */
 	max-width: 100%;
 	width: 100%;
-	overscroll-behavior: none;
 }
 
 .navbar {
@@ -35,7 +38,7 @@ body {
 	/* Position the navbar at the top of the page */
 	width: 100%;
 	/* Full width */
-	z-index: 2;
+	z-index: 1;
 }
 
 /* Links inside the navbar */
@@ -71,7 +74,8 @@ h1 {
 	font-size: 2.5rem;
 }
 
-p {
+p,
+a {
 	text-transform: uppercase;
 	font-size: 0.9rem;
 }
@@ -117,8 +121,9 @@ a {
 
 .about,
 .franchise {
-	margin: 2em;
-	min-height: 92vh;
+	margin-top: 2em;
+	padding: 2em;
+	min-height: 87vh;
 	overflow: hidden;
 	-ms-interpolation-mode: nearest-neighbor;
 	image-rendering: -moz-crisp-edges;
@@ -130,10 +135,10 @@ a {
 	position: absolute;
 	top: 0;
 	left: 0;
-	height: 92vh;
+	height: 87vh;
 	width: 400%;
-	-webkit-mask: url('../img/misc/noise.svg'), radial-gradient(circle at 50% 0, transparent 2%, #ffffff 80%) 0 0/50% 100%;
-	mask: url('../img/misc/noise.svg'), radial-gradient(circle at 50% 0, transparent 2%, #ffffff 80%) 0 0/50% 100%;
+	-webkit-mask: url('../img/misc/noise.gif'), radial-gradient(circle at 50% 0, transparent 2%, #ffffff 80%) 0 0/50% 100%;
+	mask: url('../img/misc/noise.gif'), radial-gradient(circle at 50% 0, transparent 2%, #ffffff 80%) 0 0/50% 100%;
 
 }
 
@@ -158,14 +163,7 @@ a {
 	display: grid;
 	grid-template-columns: repeat(32, 0.25fr);
 	grid-auto-rows: auto;
-	column-gap: 1em;
 	z-index: 1;
-}
-
-.about h1:nth-of-type(1) {
-	grid-column: 3 / 5;
-	grid-row: 2 / 3;
-	align-self: flex-end;
 }
 
 .about .photo {
@@ -179,6 +177,14 @@ a {
 	padding: 1em;
 	display: grid;
 	position: relative;
+}
+
+.about .photo:hover {
+	filter: invert(100%) !important;
+}
+
+.f-grid li:last-child:hover {
+	filter: invert(100%) !important;
 }
 
 .about .photo::after {
@@ -197,19 +203,26 @@ a {
 	grid-row: 1 / -1;
 	font-size: 2rem;
 	text-transform: lowercase;
+	background-color: var(--blue);
 	color: var(--white);
+}
+
+.about h1:nth-of-type(1) {
+	grid-column: 3 / 5;
+	grid-row: 1 / 2;
+	align-self: flex-end;
 }
 
 .about h1:nth-of-type(2) {
 	grid-column: 4 / 6;
-	grid-row: 3 / 4;
+	grid-row: 2 / 2;
 }
 
 .about p:nth-of-type(2) {
 	width: 10ch;
 	text-align: right;
 	grid-column: 3 / 4;
-	grid-row: 3 / 4;
+	grid-row: 2 / 4;
 	align-self: center;
 	color: var(--grey);
 	position: relative;
@@ -226,11 +239,30 @@ a {
 	background-color: var(--red);
 }
 
+.about p:nth-of-type(3) {
+	grid-column: 3 / 5;
+	grid-row: 2 / 4;
+}
+
+/* 
+.about p:nth-of-type(3) {
+	width: var(--about-text-size);
+	grid-column: 3 / 5;
+	grid-row: 6 / 8;
+} */
+
+.about p:nth-of-type(4) {
+	width: var(--about-text-size);
+	grid-column: 6 / 8;
+	grid-row: 6 / 7;
+}
+
 .about .title {
 	grid-column: 3 / 8;
-	grid-row: 5 / 6;
+	grid-row: 10 / 10;
 	display: grid;
 	grid-template-columns: 7ch 1fr;
+	height: 25px;
 	align-items: center;
 }
 
@@ -240,16 +272,8 @@ a {
 	background-color: var(--black);
 }
 
-.about p:nth-of-type(3) {
-	width: var(--about-text-size);
-	grid-column: 3 / 5;
-	grid-row: 6 / 8;
-}
-
-.about p:nth-of-type(4) {
-	width: var(--about-text-size);
-	grid-column: 6 / 8;
-	grid-row: 6 / 7;
+.about .title>a {
+	color: var(--black);
 }
 
 /* SECTION: Franchise */
@@ -263,7 +287,7 @@ a {
 
 .franchise h1:nth-of-type(1) {
 	grid-column: 3 / -1;
-	grid-row: 2 / 3;
+	grid-row: 1 / 3;
 }
 
 .franchise .title {
@@ -282,7 +306,7 @@ a {
 }
 
 .franchise .f-grid {
-	--item-size: 0.6fr;
+	--item-size: 0.2fr;
 
 	grid-column: 3 / -1;
 	grid-row: 6 / 7;
@@ -364,7 +388,7 @@ a {
 
 .f-grid li:last-child {
 	background-image: url('../img/3.jpg');
-	background-size: cover;
+	background-size: contain;
 	background-position: center top;
 	position: relative;
 	border: 0;
@@ -379,7 +403,7 @@ a {
 	width: 100%;
 	height: 100%;
 	background-color: var(--red);
-	mix-blend-mode: overlay;
+	mix-blend-mode: soft-light;
 }
 
 .franchise .p-grid {
@@ -416,15 +440,15 @@ header p {
 	font-size: 0.8rem;
 }
 
-/* 
-header p.supports {
-	display: none;
+.blink_me {
+	animation: blinker 1s linear infinite;
 }
 
-header a {
-	display: inline-block;
-	color: var(--red);
-} */
+@keyframes blinker {
+	50% {
+		opacity: 0;
+	}
+}
 
 @supports (grid-template-columns: subgrid) {
 	.container {
